# astrosim

./: .gitignore  AGENTS.md  AGENT_INDEX.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: AGENT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  (+1 more)
contracts/: README.md  critic_review.schema.md  events.yaml  export_result.schema.json  llm_insight.schema.json  optimization_result.schema.json  scenario.schema.json  scenario_compare.schema.json  study_report.schema.json  subsystem_outputs.yaml  suite_report.schema.json  trade_study.schema.json  validation_report.schema.json
docs/: AGENT_TEMPLATE.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  IO.md  PERFORMANCE.md  PLUGIN_COOKBOOK.md  PRD.md  RELEASE.md  ROADMAP.md  SCENARIOS.md  SRD.md  STUDY_TEMPLATE.md  TUTORIAL.md  index.md
examples/: AGENT.md  custom_subsystem.py  run_compare.py  run_deep_space.py  run_greenhouse_lunar.py  run_lunar_base.py  run_mars_closed_loop.py  run_mars_habitat.py  run_optimize.py  run_orbital_station.py  run_sensitivity.py  run_suite.py  run_trade_study.py  tutorial.ipynb
reference/: benchmarks.yaml
reviews/: epic-agent-scaffold.md  epic-contracts.md  epic-event-handlers.md  epic-export-contract.md  epic-phase16.md  epic-phase6.md  epic-release-prep.md  epic-scenario-parity.md  epic-viz-test.md
scenarios/: AGENT.md  deep_space_transit.json  deep_space_transit.yaml  greenhouse_lunar.json  greenhouse_lunar.yaml  greenhouse_mars.json  greenhouse_mars.yaml  lunar_base.json  lunar_base.yaml  mars_closed_loop.json  mars_closed_loop.yaml  mars_habitat.json  mars_habitat.yaml  orbital_greenhouse.json  orbital_greenhouse.yaml  orbital_station.json  orbital_station.yaml
scripts/: benchmark_sim.py  build_docs.sh  check_agent_sync.sh  integrity_check.sh  push_github.sh  restore_ci_push.sh  smoke_custom_subsystem.sh  smoke_examples.sh  smoke_llm.sh  smoke_mars_quick.sh  smoke_wheel.sh  verify_pypi_ready.sh
tests/: AGENT.md  test_ai_adapters.py  test_ai_hooks.py  test_cli.py  test_cli_unit.py  test_closed_loop_audit.py  test_compare.py  test_compute.py  test_contracts_events.py  test_contracts_export.py  test_contracts_optimize.py  test_contracts_parity.py  test_contracts_scenario.py  test_contracts_subsystems.py  test_contracts_validation.py  test_eclss.py  test_eclss_food_loop.py  test_energy_budget.py  test_export.py  test_greenhouse.py  test_insights.py  test_interpretation.py  test_interpretation_v2.py  test_isru.py  test_isru_eclss_o2_loop.py  test_isru_eclss_water_loop.py  test_mass_budget.py  test_monte_carlo.py  test_optimize.py  test_pareto.py  test_power.py  test_reference_validation.py  test_reliability_budget.py  test_scenario.py  test_scenario_editor.py  test_simulator.py  test_srd_features.py  test_structure.py  test_study_report.py  test_subsystem_base.py  (+4 more)
(+81 files in other folders)
