[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrosim"
version = "1.2.0"
description = "Open-source simulation framework for sustainable space habitat modeling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "aadriantech" }]
keywords = ["space", "simulation", "habitat", "aerospace", "monte-carlo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "pandas>=2.1",
    "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/aadriantech/astrosim"
Documentation = "https://aadriantech.github.io/astrosim/"
Repository = "https://github.com/aadriantech/astrosim"
Issues = "https://github.com/aadriantech/astrosim/issues"
Changelog = "https://github.com/aadriantech/astrosim/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "jsonschema>=4.20", "scipy>=1.11", "build>=1.0"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]
optimize = ["scipy>=1.11"]
ai = []

[project.scripts]
astrosim = "astrosim.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/astrosim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]